# VolumeAssistant

./: .gitignore  LICENSE  README-PS-SCRIPTS.md  README.md  TECHNICAL.md  VolumeAssistant.slnx
.github/workflows/: release-app.yml  release-service.yml
scripts/: Configure-AppSettings.ps1  Create-VolumeIcon.ps1  Install-VolumeAssistant.ps1  Install-VolumeAssistantApp.ps1  Start-VolumeAssistant.ps1  Stop-VolumeAssistant.ps1  install-app.ps1  install-service.ps1
src/VolumeAssistant.App/: App.xaml  App.xaml.cs  AppOptions.cs  MainForm.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  Theme.cs  TrayApplication.cs  UiLoggerProvider.cs  VolumeAssistant.App.csproj  appsettings.Development.json  appsettings.json
src/VolumeAssistant.App.Rust/: Cargo.toml  appsettings.json
src/VolumeAssistant.App.Rust/src/: config.rs  coordinator.rs  icon.rs  main.rs  mdns.rs  tray.rs
src/VolumeAssistant.App.Rust/src/audio/: mod.rs
src/VolumeAssistant.App.Rust/src/cambridge/: mod.rs  models.rs
src/VolumeAssistant.App.Rust/src/matter/: device.rs  mod.rs  protocol.rs  server.rs
src/VolumeAssistant.App.Rust/src/window/: mod.rs
src/VolumeAssistant.Core/: CambridgeAudioSyncer.cs  GlobalUsings.cs  UiLoggerProvider.cs  VolumeAssistant.Core.csproj  VolumeSyncCoordinator.cs
src/VolumeAssistant.Service/: Program.cs  VolumeAssistant.Service.csproj  VolumeSyncCoordinator.cs  Worker.cs  appsettings.Development.json  appsettings.json
src/store.web/: Program.cs  appsettings.json  store.web.csproj
tests/VolumeAssistant.Tests/: AppTests.cs  BalanceToggleTests.cs  ClusterTests.cs  (+17 more)
(+65 files in other folders)
