[package]
name = "volume-assistant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "VolumeAssistantApp"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Devices_Properties",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.26", default-features = false, features = ["handshake"] }
mdns-sd = "0.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
